--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack && start http://localhost:3000/myportfolio",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
